# stock-trader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
stock_trader/: config.yaml  main.py  utils.py
stock_trader/agents/: ddqn.py
stock_trader/agents/utils/: prioritized_replay_buffer.py  sum_tree.py
stock_trader/data/raw/: AAPL-1h-from-2022-01-01-to-2023-01-01.csv  AAPL.csv
stock_trader/environments/: stock_trading_env.py
stock_trader/logs/: events.out.tfevents.1703790586.Seran-sin-MBP.home.97380.0
stock_trader/models/: model_10.h5  model_10.pt  model_100.h5  model_100.pt  model_20.h5  model_20.pt  model_30.h5  model_30.pt  model_40.h5  model_40.pt  model_50.h5  model_50.pt  model_60.h5  model_60.pt  model_70.h5  model_70.pt  model_80.h5  model_80.pt  model_90.h5  model_90.pt
