[tool.poetry]
name = "stock-trader"
version = "0.1.0"
description = ""
authors = ["Seran Shanmugathas <seran@live.no>"]
readme = "README.md"
packages = [{include = "stock_trader"}]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
yfinance = "^0.2.33"
pyyaml = "^6.0.1"
gymnasium = "^0.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
